fix gap to open productInfo in search and catalog

--- a/css/style.css
+++ b/css/style.css
@@ -789,7 +789,7 @@ body {
 }
 
 .popup {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100vw;
